GNOME Bugzilla – Bug 701798
rtspsrc: Regression with connections to certain live stream
Last modified: 2013-06-10 13:32:38 UTC
Try these here: http://demo.smart-streaming.com/fms/demo/mobile.html Works in 1.0, fails in git master: $ gst-launch-1.0 playbin uri="rtsp://media.smart-streaming.com/mytest/mp4:sample_phone_150k.mp4" Setting pipeline to PAUSED ... Pipeline is live and does not need PREROLL ... Progress: (open) Opening Stream Progress: (connect) Connecting to rtsp://media.smart-streaming.com/mytest/mp4:sample_phone_150k.mp4 0:00:00.627255752 30054 0xd6d370 ERROR default gstrtspconnection.c:685:gst_rtsp_connection_connect: failed to connect: Could not connect to media.smart-streaming.com: Connection refused 0:00:00.627341788 30054 0xd6d370 ERROR rtspsrc gstrtspsrc.c:3558:gst_rtsp_conninfo_connect:<source> Could not connect to server. (Generic error) ERROR: from element /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0/GstRTSPSrc:source: Could not open resource for reading and writing. Additional debug info: gstrtspsrc.c(5986): gst_rtspsrc_retrieve_sdp (): /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0/GstRTSPSrc:source: Failed to connect. (Generic error) ERROR: pipeline doesn't want to preroll. Setting pipeline to PAUSED ... Setting pipeline to READY ... Setting pipeline to NULL ... Freeing pipeline ...
I've got the same errors in the latest GIT version (but works in previously): root@testingVM:~# gst-launch-1.0 rtspsrc location=rtsp://192.168.0.253/ch0_0.h264 ! application/x-rtp,media=video ! decodebin ! videoscale ! v4l2sink device=/dev/video0 Setting pipeline to PAUSED ... Pipeline is live and does not need PREROLL ... Progress: (open) Opening Stream Progress: (connect) Connecting to rtsp://192.168.0.253/ch0_0.h264 0:00:00.028677796 16380 0x1f65680 ERROR default gstrtspconnection.c:685:gst_rtsp_connection_connect: failed to connect: Could not connect to 192.168.0.253: Connection refused 0:00:00.028939070 16380 0x1f65680 ERROR rtspsrc gstrtspsrc.c:3558:gst_rtsp_conninfo_connect:<rtspsrc0> Could not connect to server. (Generic error) ERROR: from element /GstPipeline:pipeline0/GstRTSPSrc:rtspsrc0: Could not open resource for reading and writing. Additional debug info: gstrtspsrc.c(5986): gst_rtspsrc_retrieve_sdp (): /GstPipeline:pipeline0/GstRTSPSrc:rtspsrc0: Failed to connect. (Generic error) ERROR: pipeline doesn't want to preroll. Setting pipeline to PAUSED ... Setting pipeline to READY ... Setting pipeline to NULL ... Freeing pipeline ... root@testingVM:~# If some debug or test is needed tell me.
It works when manually setting the port to 554. Otherwise it tries to connect to port 0! :)
commit 567be29db2cf64510a8bbe4aadd284fc9289f661 Author: Sebastian Dröge <slomo@circular-chaos.org> Date: Mon Jun 10 15:31:38 2013 +0200 rtspconnection: Make sure to set a sensible default port for the GSocketConnection Otherwise it will connect to port 0 if no port is given in the URI. https://bugzilla.gnome.org/show_bug.cgi?id=701798