rtspconnection: Make sure to set a sensible default port for the GSocketConnection

Otherwise it will connect to port 0 if no port is given in the URI.

https://bugzilla.gnome.org/show_bug.cgi?id=701798